// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NGLComponent Should match existing snapshot when canvas is available 1`] = `
<NGLComponent>
  <div
    id="NGLComponent"
    style={
      Object {
        "padding": 15,
      }
    }
  >
    <div
      style={
        Object {
          "height": 370,
          "width": 370,
        }
      }
    />
    <br />
    <Dropdown
      additionLabel="Add "
      additionPosition="top"
      closeOnBlur={true}
      deburr={false}
      defaultValue="distance"
      fluid={true}
      icon="dropdown"
      minCharacters={1}
      noResultsMessage="No results found."
      onChange={[Function]}
      openOnFocus={true}
      options={
        Array [
          Object {
            "key": "axes",
            "text": "Using axes representations for residues",
            "value": "axes",
          },
          Object {
            "key": "backbone",
            "text": "Using backbone representations for residues",
            "value": "backbone",
          },
          Object {
            "key": "ball+stick",
            "text": "Using ball+stick representations for residues",
            "value": "ball+stick",
          },
          Object {
            "key": "distance",
            "text": "Using distance representations for residues",
            "value": "distance",
          },
          Object {
            "key": "label",
            "text": "Using label representations for residues",
            "value": "label",
          },
          Object {
            "key": "line",
            "text": "Using line representations for residues",
            "value": "line",
          },
          Object {
            "key": "hyperball",
            "text": "Using hyperball representations for residues",
            "value": "hyperball",
          },
          Object {
            "key": "spacefill",
            "text": "Using spacefill representations for residues",
            "value": "spacefill",
          },
        ]
      }
      renderLabel={[Function]}
      searchInput="text"
      selectOnBlur={true}
      selectOnNavigation={true}
      wrapSelection={true}
    >
      <div
        aria-expanded={false}
        className="ui fluid dropdown"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        >
          Using distance representations for residues
        </div>
        <Icon
          as="i"
          key="dropdown"
          name="dropdown"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="dropdown icon"
            onClick={[Function]}
          />
        </Icon>
        <DropdownMenu>
          <div
            className="menu transition"
          >
            <DropdownItem
              active={false}
              key="axes"
              onClick={[Function]}
              selected={false}
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
              text="Using axes representations for residues"
              value="axes"
            >
              <div
                aria-checked={false}
                aria-selected={false}
                className="item"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }
              >
                <span
                  className="text"
                  key="Using axes representations for residues"
                >
                  Using axes representations for residues
                </span>
              </div>
            </DropdownItem>
            <DropdownItem
              active={false}
              key="backbone"
              onClick={[Function]}
              selected={false}
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
              text="Using backbone representations for residues"
              value="backbone"
            >
              <div
                aria-checked={false}
                aria-selected={false}
                className="item"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }
              >
                <span
                  className="text"
                  key="Using backbone representations for residues"
                >
                  Using backbone representations for residues
                </span>
              </div>
            </DropdownItem>
            <DropdownItem
              active={false}
              key="ball+stick"
              onClick={[Function]}
              selected={false}
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
              text="Using ball+stick representations for residues"
              value="ball+stick"
            >
              <div
                aria-checked={false}
                aria-selected={false}
                className="item"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }
              >
                <span
                  className="text"
                  key="Using ball+stick representations for residues"
                >
                  Using ball+stick representations for residues
                </span>
              </div>
            </DropdownItem>
            <DropdownItem
              active={true}
              key="distance"
              onClick={[Function]}
              selected={true}
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
              text="Using distance representations for residues"
              value="distance"
            >
              <div
                aria-checked={true}
                aria-selected={true}
                className="active selected item"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }
              >
                <span
                  className="text"
                  key="Using distance representations for residues"
                >
                  Using distance representations for residues
                </span>
              </div>
            </DropdownItem>
            <DropdownItem
              active={false}
              key="label"
              onClick={[Function]}
              selected={false}
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
              text="Using label representations for residues"
              value="label"
            >
              <div
                aria-checked={false}
                aria-selected={false}
                className="item"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }
              >
                <span
                  className="text"
                  key="Using label representations for residues"
                >
                  Using label representations for residues
                </span>
              </div>
            </DropdownItem>
            <DropdownItem
              active={false}
              key="line"
              onClick={[Function]}
              selected={false}
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
              text="Using line representations for residues"
              value="line"
            >
              <div
                aria-checked={false}
                aria-selected={false}
                className="item"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }
              >
                <span
                  className="text"
                  key="Using line representations for residues"
                >
                  Using line representations for residues
                </span>
              </div>
            </DropdownItem>
            <DropdownItem
              active={false}
              key="hyperball"
              onClick={[Function]}
              selected={false}
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
              text="Using hyperball representations for residues"
              value="hyperball"
            >
              <div
                aria-checked={false}
                aria-selected={false}
                className="item"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }
              >
                <span
                  className="text"
                  key="Using hyperball representations for residues"
                >
                  Using hyperball representations for residues
                </span>
              </div>
            </DropdownItem>
            <DropdownItem
              active={false}
              key="spacefill"
              onClick={[Function]}
              selected={false}
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
              text="Using spacefill representations for residues"
              value="spacefill"
            >
              <div
                aria-checked={false}
                aria-selected={false}
                className="item"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }
              >
                <span
                  className="text"
                  key="Using spacefill representations for residues"
                >
                  Using spacefill representations for residues
                </span>
              </div>
            </DropdownItem>
          </div>
        </DropdownMenu>
      </div>
    </Dropdown>
    <br />
    Selected residues: 
  </div>
</NGLComponent>
`;

exports[`NGLComponent Should match existing snapshot when canvas isn't available. 1`] = `
<div
  id="NGLComponent"
  style={
    Object {
      "padding": 15,
    }
  }
>
  <div
    style={
      Object {
        "height": 370,
        "width": 370,
      }
    }
  />
  <br />
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    defaultValue="distance"
    fluid={true}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    openOnFocus={true}
    options={
      Array [
        Object {
          "key": "axes",
          "text": "Using axes representations for residues",
          "value": "axes",
        },
        Object {
          "key": "backbone",
          "text": "Using backbone representations for residues",
          "value": "backbone",
        },
        Object {
          "key": "ball+stick",
          "text": "Using ball+stick representations for residues",
          "value": "ball+stick",
        },
        Object {
          "key": "distance",
          "text": "Using distance representations for residues",
          "value": "distance",
        },
        Object {
          "key": "label",
          "text": "Using label representations for residues",
          "value": "label",
        },
        Object {
          "key": "line",
          "text": "Using line representations for residues",
          "value": "line",
        },
        Object {
          "key": "hyperball",
          "text": "Using hyperball representations for residues",
          "value": "hyperball",
        },
        Object {
          "key": "spacefill",
          "text": "Using spacefill representations for residues",
          "value": "spacefill",
        },
      ]
    }
    renderLabel={[Function]}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    wrapSelection={true}
  />
  <br />
  Selected residues: 
</div>
`;
